# mlpops

./: .gitignore  Dockerfile.api  Dockerfile.base  Dockerfile.web  README.md  config.yml  docker-compose.yml  pyproject.toml  setup.sh
data/: raw.dvc
data/sample/: software_jobs.csv  software_jobs_2.csv  software_jobs_3.csv
scripts/: build.sh  cleanup.sh  deploy.sh  make_executable.sh  redeploy.sh  run.sh  status.sh
src/: .gitignore  __init__.py
src/api/: __init__.py
src/config/: __init__.py
src/core/: __init__.py
src/pipeline/: __init__.py
src/web/: __init__.py
terraform/: main.tf  outputs.tf  variables.tf
test/: analyze.sh  one_job.json  test.csv
